--- a/poster/static/css/style.css
+++ b/poster/static/css/style.css
@@ -1,4 +1,3 @@
-/* Basic styling */
 body {
     font-family: 'Arial', sans-serif;
     color: #333;
@@ -8,7 +7,6 @@ body {
     line-height: 1.6;
 }
 
-/* Navigation Menu Styling */
 .menu {
     background-color: #333;
     padding: 10px 20px;
@@ -20,7 +18,7 @@ body {
 .menu ul {
     list-style: none;
     display: flex;
-    justify-content: space-between; /* Создаем пространство между пунктами */
+    justify-content: space-between;
     align-items: center;
     margin: 0;
     padding: 0;
@@ -31,7 +29,7 @@ body {
 }
 
 .menu ul li:first-child {
-    margin-right: auto; /* Отодвигаем первый элемент влево */
+    margin-right: auto;
 }
 
 .menu ul li a {
@@ -47,7 +45,6 @@ body {
 }
 
 
-/* Event container styling */
 h2 {
     color: #222;
     margin-bottom: 10px;
@@ -60,17 +57,15 @@ h5 {
     margin: 5px 0 20px;
 }
 
-/* Image styling */
 img {
     width: 100%;
-    max-width: 400px; /* Ensure images are not too large */
+    max-width: 400px;
     height: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
 
-/* Layout styling */
 .event {
     margin-bottom: 40px;
     padding: 20px;
@@ -151,13 +146,6 @@ img {
 
 
 
-
-
-
-
-
-
-/* Card Details Form Styling */
 .card-details-container {
     max-width: 400px;
     margin: 50px auto;
